examples/proxy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: upstream
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream_service
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      http_service:
                        server_uri:
                          uri: http://host.docker.internal:3000
                          cluster: auth_service
                          timeout: 2s
                        path_prefix: /auth/check
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: cookie
                              - exact: accept
                              - exact: x-forwarded-proto
                              - exact: x-forwarded-host
                              - exact: x-forwarded-uri
                              - exact: user-agent
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: remote-user
                              - exact: x-forwarded-user
                              - exact: x-auth-request-user
                              - exact: x-auth-request-email
                              - exact: x-forwarded-groups
                              - exact: x-auth-request-groups
                              - exact: x-auth-request-preferred-username
                              - exact: x-auth-request-name
                              - exact: x-auth-request-picture
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: upstream_service
      connect_timeout: 2s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8080

    - name: auth_service
      connect_timeout: 2s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: auth_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 3000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
